--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -36,6 +36,20 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Focus Keyword", name: "yoast_keyword", widget: "string"}
       - {label: "Meta Description", name: "description", widget: "string"}
+  - name: "sports"
+    label: "Sports"
+    folder: "content/sports" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{name}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    format: 'json'
+    fields: # The fields for each document, usually in front matter
+      - {label: "Name", name: "name", widget: "string"}
+      - {label: "SEO Title", name: "seoTitle", widget: "string"}
+      - {label: "Featured Image", name: "featuredImage", widget: "image", required: false}
+      - {label: "Focus Keyword", name: "yoast_keyword", widget: "string"}
+      - {label: "Meta Description", name: "description", widget: "string"}
+      - {label: "Summary Content", name: "summary", widget: "markdown"}
+      - {label: "Main Content", name: "mainContent", widget: "markdown"}
   - label: "Setup"
     name: "setup"
     files:
