--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,6 +16,7 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "SEO Title", name: "seoTitle", widget: "string"}
+      - {label: "Headline Title", name: "headlineTitle", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime", format: "dddd MMMM Do, YYYY"}
       - {label: "Featured Image", name: "thumbnail", widget: "image", required: false}
       - {label: "Category", name: "category", widget: "relation", collection: "blogcategories", searchFields: ["title"], valueField: "title", displayFields: ["title"], required: false}
@@ -23,6 +24,7 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Focus Keyword", name: "yoast_keyword", widget: "string"}
       - {label: "Meta Description", name: "description", widget: "string"}
+      - {label: "Headline", name: headline, widget: boolean}
   - name: "page" # Used in routes, e.g., /admin/collections/blog
     label: "Pages" # Used in the UI
     folder: "content/page/posts" # The path to the folder where the documents are stored
