newsletter signup finally

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nuxt",
     "serve": "nuxt",
     "build": "nuxt build --no-lock",
-    "build:api": "netlify-lambda build src/sendgrid",
+    "build:api": "netlify-lambda build src/sendgrid -c ./webpack.functions.js",
     "start": "nuxt start",
     "generate": "nuxt generate --no-lock",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -19,7 +19,8 @@
     "@nuxtjs/gtm": "^2.3.0",
     "@nuxtjs/markdownit": "github:syffs/nuxtv2-markdownit",
     "@nuxtjs/pwa": "^2.0.8",
-    "@sendgrid/client": "^6.3.0",
+    "@sendgrid/client": "^7.2.2",
+    "@sendgrid/mail": "^7.2.2",
     "bf-solid": "^2.10.6",
     "chart.js": "^2.9.3",
     "coffee-loader": "^1.0.0",
