--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "node-sass": "^4.14.1",
     "nuxt": "^2.5.0",
     "sass-loader": "^7.0.3",
-    "tabulator-tables": "^4.7.2",
+    "tabulator-tables": "4.7.x",
     "vue-lazyload": "^1.2.6",
     "vue-moment": "^4.0.0"
   },
