--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "coffeescript": "^2.5.1",
     "fuse.js": "^3.2.1",
     "hoek": "^4.2.1",
+    "js-cookie": "^2.2.1",
     "neat-csv": "^5.2.0",
     "netlify-lambda": "^1.4.3",
     "node-sass": "^4.14.1",
