exit intent ebook prompt

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nuxt",
     "serve": "nuxt",
     "build": "nuxt build --no-lock",
-    "build:api": "netlify-lambda build src/sendgrid -c ./webpack.functions.js",
+    "build:api": "netlify-lambda build src/functions -c ./webpack.functions.js",
     "start": "nuxt start",
     "generate": "nuxt generate --no-lock",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -25,6 +25,7 @@
     "chart.js": "^2.9.3",
     "coffee-loader": "^1.0.0",
     "coffeescript": "^2.5.1",
+    "exit-intent-mobile-bugfix": "^1.2.8",
     "fuse.js": "^3.2.1",
     "hoek": "^4.2.1",
     "js-cookie": "^2.2.1",
@@ -34,6 +35,7 @@
     "nuxt": "^2.5.0",
     "sass-loader": "^7.0.3",
     "tabulator-tables": "4.8.x",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vue-lazyload": "^1.2.6",
     "vue-moment": "^4.0.0"
   },
