--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "tabulator-tables": "4.8.x",
     "vue-js-modal": "^2.0.0-rc.6",
     "vue-lazyload": "^1.2.6",
-    "vue-moment": "^4.0.0"
+    "vue-moment": "^4.0.0",
+    "vue-spinner": "^1.0.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
